# cy-language

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  skilltree.yaml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  nightly.yml  release.yml
docs/: TUTORIAL.md
docs/specs/: cy_language_design.md  python_like_syntax.md
examples/: README.md
examples/basics/: complex_data_processing.cy  csv_format.cy  external_tools.cy  factorial.cy  list_printing.cy  multiline_strings.cy  native_tools_demo.cy  number_classification.cy  soc_log_triage.cy  string_escaping.cy  struct_access.cy  tool_calling.cy  variable_assignment.cy  xml_format.cy
examples/llm/: basic_usage.cy
examples/mcp/: basic_calling.cy  interpolation.cy  loop_sequential.cy  native_plus_mcp.cy  parallel_execution.cy  parallel_timing.cy  virustotal_analysis.cy
scripts/: run_streamlit.sh  sync_agent_md_symlinks.sh
skills/: cy-language-programming
src/cy_language/: __init__.py  app_manager.py  archetype_router.py  argument_adapter.py  compiler.py  dependency_analyzer.py  error_context.py  error_formatter.py  errors.py  execution_plan.py  executor.py  grammar.py  interpreter.py  llm_config.py  llm_functions.py  mcp_manager.py  native_functions.py  parser.py  plan_validator.py  plan_visualization.py  script_analysis_api.py  suggestion_engine.py  tool_registry_builder.py  tool_resolver.py  tool_signature.py  type_analysis_api.py  type_checker.py  type_environment.py  type_inference_api.py  type_inference_engine.py  type_system.py  variable_normalizer.py
src/cy_language/bundled_skills/cy-language-programming/: SKILL.md
src/cy_language/bundled_skills/cy-language-programming/examples/: api-workflow.cy  basic-processing.cy  bubble-sort.cy  security-analysis.cy  type-safe-workflow.cy
src/cy_language/bundled_skills/cy-language-programming/reference/: advanced.md  compiler-api.md  control-flow.md  functions-tools.md  syntax-basics.md  time-arithmetic.md  type-checking.md
src/cy_language/bundled_skills/cy-language-programming/templates/: basic-script.cy  typed-workflow.cy
src/cy_language/cli/: __init__.py  _error_handler.py  check_cmd.py  compile_cmd.py  install_cmd.py  mcp_stdio_bridge.py  run_cmd.py  tool_loader.py  visualize_cmd.py
src/cy_language/ui/: __init__.py  app.py  example_tools.py  examples.py  styles.py  tools.py
tests/: conftest.py  mcp_test_server.py
tests/performance/: __init__.py  benchmarks.py
tests/ui/: __init__.py  conftest.py  test_app.py  test_streamlit_e2e.py
tests/unit/: test_agentic_loop.py  test_algorithmic_correctness.py  test_analyze_types_api.py  test_app_manager_stub.py  test_archetype_router_stub.py  test_argument_adapter.py  test_arithmetic_boolean_integration.py  test_arithmetic_operations.py  test_array_concatenation_bug.py  test_assume_unregistered_async.py  test_async_cy_factory.py  test_async_gather_optimization.py  test_async_interpreter.py  test_async_mcp_manager.py  test_backward_compatibility.py  test_backward_compatibility_regression.py  test_boolean_logic.py  test_brace_error_message_examples.py  test_bracket_syntax_errors.py  test_break_continue.py  test_build_tool_resolver.py  test_cache_inside_loops.py  test_cli.py  test_cli_combinations.py  test_cli_mcp.py  test_cli_tools.py  test_cli_visualize.py  test_codex_review_fixes.py  test_compiler.py  test_compiler_coverage.py  test_complete_features.py  test_complex_expressions.py  test_complex_nested_access.py  test_compound_assignment.py  test_compound_assignment_edge_cases.py  test_conditional_async_parallelization.py  test_conditional_expressions.py  test_conditional_expressions_integration.py  test_conditional_statement_union_types.py  test_control_flow_integration.py  (+178 more)
tests/unit/fixtures/: mcp_test_server.py
tests/utils/: __init__.py  debug_capture.py
tests/verification/: test_app_tool_type_checking.py
