[tool.poetry]
name = "cy-language"
version = "1.0.0"
description = "Cy language interpreter for programmable directives with AI integration"
authors = ["Marios Iliofotou <iliofotou@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
keywords = ["language", "interpreter", "ai", "llm", "automation", "scripting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    {include = "cy_language", from = "src"}
]
exclude = ["src/cy_language/llm_functions.py", "src/cy_language/llm_config.py"]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
lark = "^1.1.5"
# Phase 10 MCP dependencies
httpx = {version = "^0.28.1", optional = true}
genson = "^1.3.0"
pydantic = "^2.12.3"
typer = {version = ">=0.9.0,<1.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
mypy = "^1.3.0"
pytest-cov = "^7.0"
# Additional testing dependencies for Phase 9.1
pytest-mock = "^3.14.1"
# Phase 11 async testing dependencies
pytest-asyncio = "^1.3"
jupyter = "^1.1.1"
ipykernel = "^6.30.1"
ruff = "^0.15.7"
commitizen = "^4.13.9"
# LLM deps for testing llm_functions.py (not shipped in package)
langchain = "^0.3.27"
langchain-openai = "^0.3.28"
openai = "^1.97.1"
playwright = "^1.58.0"
pytest-playwright = "^0.7.2"
python-dotenv = "^1.2.2"
# MCP SDK for testing --mcp-stdio CLI feature (test server + client)
mcp = "^1.26.0"
typer = ">=0.9.0,<1.0"

[tool.poetry.group.e2e]
optional = true

[tool.poetry.group.e2e.dependencies]
pytest-playwright = "^0.7.2"

[tool.poetry.group.ui.dependencies]
streamlit = "^1.23.1"
streamlit-ace = "^0.1.1"

[tool.poetry.extras]
mcp = ["httpx"]
cli = ["typer"]
all = ["httpx", "typer"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
force-exclude = true
exclude = [
    "migrations/",
    ".git/",
    "__pycache__",
    ".venv/",
    "build/",
    "dist/",
    ".claude/skills/**",
    ".claude/agents/**",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    # C901 (mccabe complexity) removed — language interpreter dispatch functions
    # inherently exceed any reasonable threshold; not actionable without major refactor
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B904",   # raise from — too noisy
    "RET504", # unnecessary assignment before return
    "PT011",  # pytest.raises too broad
    "PT012",  # pytest.raises block too long
    "PT018",  # composite assertions — splitting hurts readability in our tests
    "SIM117", # nested with statements
    "RUF043", # regex metacharacters in match= (pytest.raises)
    "RUF059", # unused unpacked variable
    "RUF013", # implicit Optional
    "RUF003", # ambiguous unicode characters
    "UP007",  # Use X | Y for union types (requires 3.10+)
    "F821",   # undefined name — false positives on string forward references
]

[tool.ruff.lint.isort]
known-first-party = ["cy_language"]

[tool.ruff.lint.per-file-ignores]
"src/cy_language/cli/**" = ["T20", "B008"]
"src/cy_language/ui/**" = ["T20"]
"src/cy_language/dependency_analyzer.py" = ["T20"]
"src/cy_language/mcp_manager.py" = ["T20"]
"src/cy_language/llm_functions.py" = ["T20"]
"src/cy_language/interpreter.py" = ["T20"]
"src/cy_language/executor.py" = ["T20"]
"tests/**" = ["T20", "W291", "W293", "F841", "B007", "B017", "PT017", "RUF001", "RUF012"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
exclude = ['\.venv']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end browser tests requiring a live Streamlit server (run with: pytest -m e2e)",
    "mcp_stdio: end-to-end tests that launch a stdio MCP server subprocess (deselect with '-m not mcp_stdio')",
]
filterwarnings = [
    "ignore:coroutine method 'aclose' of 'tee_peer' was never awaited:RuntimeWarning",
    "ignore:Core Pydantic V1 functionality:UserWarning",
    "ignore:ForwardRef._evaluate is a private API:DeprecationWarning",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
version_files = [
    "pyproject.toml:^version"
]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"

[tool.poetry.scripts]
cy = "cy_language.cli:main"
cy_ui = "cy_language.ui.app:main"
